fix(UX): Fix overflow bug in the repos model (Firefox) (#75)
Switched to crossbrowser compliant css.

Resolved MS-2529

--- a/src/app/auth-github/github-dialog-repositories/github-dialog-repositories.component.scss
+++ b/src/app/auth-github/github-dialog-repositories/github-dialog-repositories.component.scss
@@ -1,7 +1,7 @@
 .el-select-list__options {
   height: 200px;
   max-height: 200px;
-  overflow: overlay;
+  overflow: auto;
 }
 
 /deep/ md-dialog-container {
